--- a/src/AppFolder/App.css
+++ b/src/AppFolder/App.css
@@ -31,3 +31,11 @@
   transform: translate(-50%, -50%);
   padding: 10px;
 }
+
+.postsRender{
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 500px;
+  
+}
