--- a/src/AppFolder/App.css
+++ b/src/AppFolder/App.css
@@ -39,3 +39,12 @@
   padding-left: 500px;
   
 }
+
+.post_Container{
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 500px;
+
+
+}
