--- a/src/Components/Comments/Comment.css
+++ b/src/Components/Comments/Comment.css
@@ -1,9 +1,9 @@
  .comment {
-    background-color: white;
     max-width: 400px;
     height: auto;
-    border: 1px solid rgb(236, 233, 233);
-    padding: 10px;
+    /* border: 1px solid rgb(236, 233, 233); */
+    padding: 5px;
+    text-align: left;
 
 } 
 
