--- a/src/Components/Posts/Post.css
+++ b/src/Components/Posts/Post.css
@@ -1,20 +1,22 @@
 .post {
-    background-color: white;
+    /* background-color: white; */
     max-width: 600px;
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
     margin-bottom: 45px;
-    padding: 30px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    margin-left: 500px;
 }
 
 .post_image {
     width: 100%;
     object-fit: contain;
-    border-top : 1px solid lightgray;
-    border-bottom : 1px solid lightgray;
+    /* border-top : 1px solid lightgray; */
+    /* border-bottom : 1px solid lightgray; */
 }
 
 .post_text {
-    font-weight: normal;
+
     padding: 20px
 }
 
@@ -26,4 +28,13 @@
 
 .post_avatar {
     margin-right: 10px;
+}
+
+.post_Container{
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 500px;
+
+
 }
